k8s/notification-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: notification-service
  namespace: smart-water

spec:
  replicas: 1

  selector:
    matchLabels:
      app: notification-service

  template:
    metadata:
      labels:
        app: notification-service

    spec:
      containers:
      - name: notification-service

        image: smart-water-monitor-notification-service:0

        imagePullPolicy: Never

        ports:
        - containerPort: 3002

        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 512Mi

        readinessProbe:
          httpGet:
            path: /
            port: 3002
          initialDelaySeconds: 10
          periodSeconds: 10

        livenessProbe:
          httpGet:
            path: /
            port: 3002
          initialDelaySeconds: 20
          periodSeconds: 15
