k8s/tank-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: tank-service
  namespace: smart-water

spec:
  replicas: 1

  selector:
    matchLabels:
      app: tank-service

  template:
    metadata:
      labels:
        app: tank-service

    spec:
      containers:
      - name: tank-service

        image: smart-water-monitor-tank-service:0

        imagePullPolicy: Never

        ports:
        - containerPort: 3001

        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 512Mi

        readinessProbe:
          httpGet:
            path: /
            port: 3001
          initialDelaySeconds: 10
          periodSeconds: 10

        livenessProbe:
          httpGet:
            path: /
            port: 3001
          initialDelaySeconds: 20
          periodSeconds: 15
