k8s/user-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: user-service
  namespace: smart-water

spec:
  replicas: 1

  selector:
    matchLabels:
      app: user-service

  template:
    metadata:
      labels:
        app: user-service

    spec:
      containers:
      - name: user-service

        image: smart-water-monitor-user-service:latest

        imagePullPolicy: Never

        ports:
        - containerPort: 3000

        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 512Mi

        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 10

        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 20
          periodSeconds: 15
