k8s/notification-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: notification-service
  namespace: smart-water

spec:
  selector:
    app: notification-service

  ports:
  - port: 3002
    targetPort: 3002

  type: ClusterIP
