k8s/tank-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: tank-service
  namespace: smart-water

spec:
  selector:
    app: tank-service

  ports:
  - port: 3001
    targetPort: 3001

  type: ClusterIP
